ref: pipfile dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-beautifulsoup4 = "*"
-yt-dlp = "*"
-lxml = "*"
+beautifulsoup4 = "==4.11.1"
+yt-dlp = "==2022.4.8"
+lxml = "==4.8.0"
+brotli = "==1.0.9"
+certifi = "==2021.10.8"
+mutagen = "==1.45.1"
+pycryptodomex = "==3.14.1"
+soupsieve = "==2.3.2.post1"
+websockets = "==10.3"
 
 [dev-packages]
 
